--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,64 +1,153 @@
-@import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Gentium+Plus:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Gentium+Plus:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
-    --primary: 221.2 83.2% 53.3%;
-    --primary-foreground: 210 40% 98%;
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 221.2 83.2% 53.3%;
-    --radius: 0rem;
-  }
+    :root {
+        --background: 0 0% 100%;
+        --foreground: 222.2 84% 4.9%;
+        --card: 0 0% 100%;
+        --card-foreground: 222.2 84% 4.9%;
+        --popover: 0 0% 100%;
+        --popover-foreground: 222.2 84% 4.9%;
+        --primary: 221.2 83.2% 53.3%;
+        --primary-foreground: 210 40% 98%;
+        --secondary: 210 40% 96.1%;
+        --secondary-foreground: 222.2 47.4% 11.2%;
+        --muted: 210 40% 96.1%;
+        --muted-foreground: 215.4 16.3% 46.9%;
+        --accent: 210 40% 96.1%;
+        --accent-foreground: 222.2 47.4% 11.2%;
+        --destructive: 0 84.2% 60.2%;
+        --destructive-foreground: 210 40% 98%;
+        --border: 214.3 31.8% 91.4%;
+        --input: 214.3 31.8% 91.4%;
+        --ring: 221.2 83.2% 53.3%;
+        --radius: 0rem;
+    }
 
-  .dark {
-    --background: 201 63.6% 4.3%;
-    --foreground: 210 40% 98%;
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
-    --primary: 217.2 91.2% 59.8%;
-    --primary-foreground: 222.2 47.4% 11.2%;
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --ring: 224.3 76.3% 48%;
-  }
+    .dark {
+        --background: 201 63.6% 4.3%;
+        --foreground: 210 40% 98%;
+        --card: 222.2 84% 4.9%;
+        --card-foreground: 210 40% 98%;
+        --popover: 222.2 84% 4.9%;
+        --popover-foreground: 210 40% 98%;
+        --primary: 217.2 91.2% 59.8%;
+        --primary-foreground: 222.2 47.4% 11.2%;
+        --secondary: 217.2 32.6% 17.5%;
+        --secondary-foreground: 210 40% 98%;
+        --muted: 217.2 32.6% 17.5%;
+        --muted-foreground: 215 20.2% 65.1%;
+        --accent: 217.2 32.6% 17.5%;
+        --accent-foreground: 210 40% 98%;
+        --destructive: 0 62.8% 30.6%;
+        --destructive-foreground: 210 40% 98%;
+        --border: 217.2 32.6% 17.5%;
+        --input: 217.2 32.6% 17.5%;
+        --ring: 224.3 76.3% 48%;
+    }
 }
 
 @layer base {
-  * {
-    @apply border-border;
-    @apply font-Barlow;
-  }
-  html {
-    @apply h-full;
-  }
-  body {
-    @apply bg-background text-foreground antialiased relative h-full font-Barlow !scroll-smooth;
-  }
+    * {
+        @apply border-border;
+        @apply font-Barlow;
+    }
+    html {
+        @apply h-full;
+    }
+    body {
+        @apply bg-background text-foreground antialiased relative h-full font-Barlow !scroll-smooth;
+    }
+}
+
+.yoopta-editor:not(#yoopta-email-builder .yoopta-editor) {
+    width: 750px !important;
+}
+
+@media (max-width: 768px) {
+    .yoopta-editor:not(#yoopta-email-builder .yoopta-editor) {
+        width: 100% !important;
+
+        & .yoopta-block-actions-plus {
+            display: none;
+        }
+    }
+}
+
+@media (max-width: 992px) {
+    .yoopta-block-actions-plus button {
+        display: none !important;
+    }
+}
+
+.yoopta-action-menu-list button span {
+    line-height: 120%;
+}
+
+#highlight-color-portal,
+#toolbar-portal,
+#action-menu-list-portal,
+.yoopta-mark-code,
+.yoopta-extended-block-actions {
+    color: #000;
+}
+
+[data-floating-ui-portal] {
+    color: #000;
+}
+
+#slack .yoopta-editor .yoopta-block-action-buttons {
+    display: none;
+}
+
+#slack .yoopta-editor .yoopta-mark-code {
+    color: #e8912d;
+    background-color: #2b2d30;
+    font-variant-ligatures: none;
+    white-space: pre;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    word-break: normal;
+    tab-size: 4;
+    border-radius: 3px;
+    padding: 2px 3px 1px;
+    font-size: 12px;
+    line-height: 1.50001;
+    font-family: Monaco, Menlo, Consolas, Courier New, monospace !important;
+    border: 1px solid rgba(232, 232, 232, 0.13);
+}
+
+#slack .yoopta-editor .yoopta-code .yoopta-code-cm-editor .cm-editor {
+    border: 1px solid rgb(53, 55, 59);
+}
+
+#slack .yoopta-editor .yoopta-code .cm-content {
+    padding: 8px;
+    line-height: 1.46668;
+}
+
+table,
+th,
+td {
+    border: 1px solid black;
+}
+
+.yoopta-carousel .yoopta-carousel-options {
+    opacity: 0;
+    transition: opacity 0.15s ease-in-out;
+    top: 0px;
+    right: 0px;
+}
+
+.yoopta-carousel:hover .yoopta-carousel-options {
+    opacity: 1;
+}
+
+.yoopta-main-page-blockquote {
+    color: white;
+    background-color: #1f6feb;
+    border-left-color: #00ca56 !important;
 }
